@@ -2,20 +2,16 @@ package com.like.hrm.staff.web;
 
 import javax.validation.Valid;
 
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RestController;
 
 import com.like.hrm.staff.boundary.StaffDTO;
 import com.like.hrm.staff.domain.model.schoolcareer.SchoolCareer;
 import com.like.hrm.staff.service.StaffSchoolCareerService;
-import com.like.system.core.web.exception.ControllerException;
 import com.like.system.core.web.util.WebControllerUtil;
 
 @RestController
@@ -27,31 +23,25 @@ public class StaffSchoolCareerController {
 		this.service = service;
 	}
 	
-	@GetMapping("/hrm/employee/{empId}/education/{id}")
-	public ResponseEntity<?> getEducation(@PathVariable String empId,
+	@GetMapping("/hrm/staff/{staffId}/education/{id}")
+	public ResponseEntity<?> getEducation(@PathVariable String staffId,
 										  @PathVariable Long id) {
 				
-		SchoolCareer education = service.getSchoolCareer(empId, id);  									
+		SchoolCareer education = service.getSchoolCareer(staffId, id);  									
 		
 		return WebControllerUtil
 				.getResponse(education											
-							,String.format("%d 건 조회되었습니다.", education == null ? 0 : 1)
-							,HttpStatus.OK);
+							,"%d 건 조회되었습니다.".formatted(education == null ? 0 : 1));
 	}
-	
-	@RequestMapping(value={"/hrm/employee/education"}, method={RequestMethod.POST,RequestMethod.PUT})	
-	public ResponseEntity<?> saveEducation(@RequestBody @Valid StaffDTO.FormEducation dto, BindingResult result) {			
 		
-		if ( result.hasErrors()) {
-			throw new ControllerException("오류");
-		} 											
+	@PostMapping("/hrm/staff/education")
+	public ResponseEntity<?> saveEducation(@RequestBody @Valid StaffDTO.FormEducation dto) {					
 				
 		service.saveSchoolCareer(dto);
 											 				
 		return WebControllerUtil
 				.getResponse(null							
-							,String.format("%d 건 저장되었습니다.", 1)
-							,HttpStatus.OK);
+							,"1 건 저장되었습니다.");
 	}
 	
 }
